--- a/css/cart.css
+++ b/css/cart.css
@@ -366,6 +366,20 @@ header a {
     margin-bottom: 40px;
     margin-top: 10px;
 }
+.ordering2 input {
+    border: none;
+    outline: none;
+    width: 100px;
+    height: 26px;
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    /*font-family: "Noto Sans", serif;*/
+    font-weight: 600;
+
+    margin-top: 60px;
+}
 
 .text-description {
     width: 75%;
@@ -452,6 +466,9 @@ label {
     bottom: calc(50% - 200px);
     left: calc(50% - 400px);
     right: calc(50% - 400px);
+    width: 300px;
+    height: 150px;
+    background-color: #fff;
 }
 
 .smoke {
